# summit

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  GEMINI.md  LICENSE  README.md  build.sh  io.github.summit.json  pyproject.toml  release.py  rewrite_history.py  style.css
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/io.github.summit/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-io.github.summit.json/: build-summit  cleanup  finish  init
.flatpak-builder/cache/summaries/: 6abd83bdd4cd65d763732a39e767c84e6ef5d3f6cd999531b645aac0623f0bfa-a5e46c549c29704ffa7ed2a6011fdcda1674c8c2283ddf62b8144d44bb869c2b.delta
.flatpak-builder/checksums/: x86_64-io.github.summit.json
debian/: changelog  control  postinst
docs/plans/: 2026-02-19-autoconnect-design.md  2026-02-19-autoconnect-plan.md  2026-02-19-cities-double-click-connect-design.md  2026-02-19-cities-double-click-connect-plan.md  2026-02-21-improvements-design.md  2026-02-21-improvements-implementation.md  2026-02-22-auto-highlight-countries-design.md  2026-02-22-auto-highlight-countries-implementation.md  2026-03-02-native-theme-design.md  2026-03-02-native-theme.md
src/: main.py  meshnet_pane.py  ports_pane.py  recent_pane.py  servers_pane.py  settings_pane.py  status_pane.py  summit_manager.py  toast.py
src/resources/: style.css  summit.gresource.xml
src/ui/: main_window.blp  meshnet_pane.blp  ports_pane.blp  servers_pane.blp  settings_pane.blp  status_pane.blp
tests/: test_reconnect.py  test_servers_pane.py
