[project]
name = "summit"
version = "0.8.4"
description = "A GTK4 Python application for VPN management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyGObject",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
